--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,26 +9,31 @@
 #  weight = 10
 
 [[main]]
-  name = "News"
+  name = "ALIS-Boka"
+  url = "alisboka"        #"https://alisboka.netlify.app/"
+  weight = 10
+
+[[main]]
+  name = "Nyheter"
   url = "post"
   weight = 20
 
 [[main]]
-  name = "People"
+  name = "Ansatte"
   url = "people"
   weight = 30
 
 [[main]]
-  name = "Events"
+  name = "Arrangementer"
   url = "event"
   weight = 40
 
 [[main]]
-  name = "Publications"
+  name = "Publikasjoner og rapporter"
   url = "publication"
   weight = 50
 
 [[main]]
-  name = "Contact"
+  name = "Kontakt oss"
   url = "contact"
   weight = 60
